Mon Sep  4 11:06:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/gdomap.c: better debug output (hopefully)

Wed Sep 29 21:34:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSData.m: More GC updates (atomic data buffer)
	* Source/NSGString.m: ditto
	* Source/NSGCString.m: ditto
	* Source/NSObject.m: More GC updates
	* Source/NSZone.m: ditto
	* Source/mframe.m: ditto
	* Source/objc-gnu2next.m: ditto
	* Headers/Foundation/GSIMap.h: ditto

Tue Sep 28 20:54:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSArray.m: Tidy for GC stuff
	* Source/NSAttributedString.m: ditto
	* Source/NSCallBacks.m: ditto
	* Source/NSConnection.m: ditto
	* Source/NSData.m: ditto
	* Source/NSDateFormatter.m: ditto
	* Source/NSFileManager.m: ditto
	* Source/NSGArray.m: ditto
	* Source/NSGCountedSet.m: ditto
	* Source/NSGDictionary.m: ditto
	* Source/NSGSet.m: ditto
	* Source/NSInvocation.m: ditto
	* Source/NSNotificationCenter.m: ditto
	* Source/NSObject.m: ditto
	* Source/NSPortNameServer.m: ditto
	* Source/NSProcessInfo.m: ditto
	* Source/NSRunLoop.m: ditto
	* Source/NSScanner.m: ditto
	* Source/NSString.m: ditto
	* Source/NSTimeZone.m: ditto
	* Source/NSUnarchiver.m: ditto
	* Source/NSUndoManager.m: ditto
	* Source/NSUserDefaults.m: ditto
	* Source/TcpPort.m: ditto
	* Source/propList.h: ditto

Tue Sep 28 11:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSArray.m: ([+allocWithZone:]) tiny optimisation.
	* Source/NSCountedSet.m: Some optimisation.
	* Source/NSTask.m: implement ([-interrupt]) to send SIGINT.
	* Source/NSUserDefaults.m: ([-searchList]) return constant array.
	Various tidying up and optimisations.
	([-persistentDomainForName:]) fixed memory leak.
	([-volatileDomainForName:]) return constant dictionary.
	([-setPersistentDomain:forName:]) make mutable copy.
	([-setVolatileDomain:forName:]) ditto
	* Source/NSObject.m: GC tweaks
	* Source/NSZone.m: added zone for atomic GC